# opengl-demo

./: .gitignore  CMakeLists.txt  README.md
common/: app_base.cpp  app_base.h  camera.cpp  camera.h  file_manager.cpp  file_manager.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.hpp  stb_image.cpp
imgui/example/: fragment.glsl  main.cpp  vertex.glsl
opg_1.1_triangles/: fragment.glsl  playground.cpp  vertex.glsl
opg_1.2_uniform_block/: fragment.glsl  playground.cpp  vertex.glsl
opg_1.3_program_pipeline/: fragment.glsl  fragment2.glsl  playground.cpp  vertex.glsl
opg_3.1_basic_lighting/: fragment.glsl  playground.cpp
opg_3.1_diffuse_lighting/: fragment.glsl  playground.cpp  vertex.glsl
opg_3.5_draw/: fragment.glsl  main.cpp
opg_3.6_primitive_restart/: main.cpp  vertex.glsl
opg_4.1_pbr/: fragment.glsl  playground.cpp  vertex.glsl
opg_5.1_ssao/: fragment.glsl  playground.cpp  ssao_blur_fragment.glsl  ssao_fragment.glsl  ssao_lighting_pass_fragment.glsl  ssao_vertex.glsl  vertex.glsl
opg_7.1_point_sprite/: fragment.glsl  geometry.glsl  point_sprite.cpp  vertex.glsl
opg_7.2_wireframe/: fragment.glsl  geometry.glsl  point_sprite.cpp  vertex.glsl
opg_8.1_shadow_map/: debug.fs.glsl  debug.vs.glsl  lighting.fs.glsl  lighting.vs.glsl  shadow_map.cpp  vertex.glsl
playground/: fragment.glsl  playground  playground.cpp  vertex.glsl
playground_HDR/: hdr.vs.glsl  playground.cpp  vertex.glsl
playground_advanced_opengl/: fragment.glsl  playground.cpp  single_color_fragment.glsl  single_color_vertex.glsl  vertex.glsl
playground_blinn_phong/: fragment.glsl  playground.cpp  vertex.glsl
playground_deferred_shading/: fragment.glsl  illumination.fs.glsl  illumination.vs.glsl  light.vs.glsl  playground.cpp
playground_gamma_correction/: fragment.glsl  playground.cpp
playground_geometry_shader/: fragment.glsl  geometry.glsl  playground.cpp  vertex.glsl
playground_hdr_bloom/: bloom.fs.glsl  bloom.vs.glsl  blur.fs.glsl  fragment.glsl  hdr.fs.glsl  light.fs.glsl  playground.cpp  vertex.glsl
playground_instancing/: fragment.glsl  playground.cpp  vertex.glsl
playground_instancing_planet/: fragment.glsl  playground.cpp  rockVertex.glsl  vertex.glsl
playground_load_model/: fragment.glsl  geometry.glsl  lampVertex.glsl  normal_fragment.glsl  normal_geometry.glsl  normal_vertex.glsl  playground.cpp  vertex.glsl
playground_load_model_skybox/: fragment.glsl  lampFragment.glsl  playground.cpp  skyboxFragment.glsl  skyboxVertex.glsl  vertex.glsl
playground_math_test/: TBN.cpp  calculate.cpp  filesys.cpp  normal_matrix.cpp
playground_multisample_anti_aliasing/: fragment.glsl  playground.cpp  screenFragment.glsl  vertex.glsl
playground_normal_mapping/: fragment.glsl  playground.cpp  vertex.glsl
playground_parrallax_mapping/: fragment.glsl  playground.cpp
playground_shadow_mapping/: debug_quad.fs.glsl  debug_quad.vs.glsl  playground.cpp  shadow_mapping.fs.glsl  shadow_mapping.vs.glsl  vertex.glsl
playground_shadow_mapping_point_light/: debug_light.fs.glsl  debug_light.vs.glsl  fragment.glsl  geometry.glsl  playground.cpp  shadow_mapping.fs.glsl  shadow_mapping.vs.glsl  vertex.glsl
resource/: tmp
